--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
+#Nombre de la aplicacion
+spring.application.name=libro-service
+
 #localhost
 spring.data.mongodb.database=Cibertec
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
 server.port = 8095
+
+#Eureka client
+eureka.client.register-with-eureka=true
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+
+
+
